--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,30 @@
-
 /* Your CSS Code here. */
+.holder{
+	display:flex;
+	justify-content:center;
+	flex-wrap:wrap;
+}
+
+.item1, .item2, .item3{
+	width:100px;
+	height:100px;
+	background-color:green;
+}
+
+.item1{
+	width:100px;
+	height:100px;
+	background-color:green;
+}
+
+.item2{
+	width:100px;
+	height:100px;
+	background-color:red;
+}
+
+.item3{
+	width:100px;
+	height:100px;
+	background-color:blue;
+}
